src/test/ui/issues/issue-23302-1.stderr
error[E0391]: cycle detected when processing `X::A::{{constant}}#0`
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^
   |
   = note: ...which again requires processing `X::A::{{constant}}#0`, completing the cycle
note: cycle used when processing `X::A::{{constant}}#0`
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
